--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,28 @@
 .DS_Store
 /build
 /captures
+
+*.apk
+*.ap_
+
+*.dex
+
+*.class
+
+bin/
+gen/
+local.properties
+
+Thumbs.db
+.DS_Store
+
+.classpath
+.project
+
+*.iml
+.idea
+.gradle
+build/
+
+obj/
+
